@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-2.3.6:
+  * bug fix: FILE-POSITION on string output streams no longer crashes or
+    causes arbitrary memory overwrites.  (lp#1839040)
+
 changes in sbcl-2.3.6 relative to sbcl-2.3.5:
   * platform support:
     ** restore building contribs on riscv; (lp#2002930)
